--- a/src/player/components/volume.css
+++ b/src/player/components/volume.css
@@ -1,7 +1,7 @@
 .Volume {
   display: flex;
   align-items: center;
-  padding: 0 15px;
+  padding: 0 25px;
   border: none;
   background: transparent;
   cursor: pointer;
@@ -23,7 +23,7 @@
   border-radius: 0 20px 20px 0;
 }
 .Volume input {
-  cursor: grab;
+  cursor: -webkit-grab;
   background: blue;
   border: 1px solid blue;
 }
